--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-simple-typewriter": "^5.0.1",
+    "react-slick": "^0.29.0",
     "react-social-icons": "^5.15.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "5.0.2"
   },
   "devDependencies": {
+    "@types/react-slick": "^0.23.10",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwind-scrollbar": "^3.0.0",
