--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typescript": "5.0.2"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.7",
     "@types/react-slick": "^0.23.10",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
